k8s-infra-vault/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
spec:
  ingressClassName: nginx
  rules:
    - host: <vaulthostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault-ui
              port:
                number: 8200
